Design: 툴바 테마 추가 #8
툴바 테마 Theme.AgijagiToolbar 추가.
컬러값 추가

--- a/agijagi/app/src/main/res/values/colors.xml
+++ b/agijagi/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparency">#00FFFFFF</color>
+
+    <color name="jagi_brown">#FFB09887</color>
+    <color name="jagi_ivory">#FFFFFBF7</color>
+    <color name="jagi_carrot">#FFFF5C00</color>
 </resources>
