--- a/agijagi/app/src/main/res/values/colors.xml
+++ b/agijagi/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="hint_color">#6BFFFFFF</color>
+
+    <color name="jagi_brown">#B09887</color>
+    <color name="jagi_ivory">#FFFBF7</color>
+    <color name="jagi_carrot">#FF5C00</color>
+
 </resources>
