Design: signup seller/buyer ui #2
add signup seller/buyer

--- a/agijagi/app/src/main/res/values/colors.xml
+++ b/agijagi/app/src/main/res/values/colors.xml
@@ -4,6 +4,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparency">#00FFFFFF</color>
 
+    <color name="hint_color">#D1FFFFFF</color>
+
+    <color name="noactive">#FFD9D9D9</color>
+
     <color name="jagi_brown">#FFB09887</color>
     <color name="jagi_ivory">#FFFFFBF7</color>
     <color name="jagi_carrot">#FFFF5C00</color>
