--- a/agijagi/app/src/main/res/layout/fragment_login.xml
+++ b/agijagi/app/src/main/res/layout/fragment_login.xml
@@ -50,7 +50,6 @@
                 android:layout_marginTop="60dp"
                 android:layout_marginEnd="24dp"
                 android:background="@drawable/wide_box_rounded_stroke"
-
                 app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -58,7 +57,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="이메일을 입력하세요"
-                    android:textColorHint="@color/hint_color" />
+                    android:textColorHint="@color/transparency" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -79,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:hint="비밀번호를 입력하세요"
                     android:inputType="textPassword"
-                    android:textColorHint="@color/hint_color" />
+                    android:textColorHint="@color/transparency" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.appcompat.widget.AppCompatImageButton
