--- a/agijagi/app/src/main/res/layout/fragment_signup_select.xml
+++ b/agijagi/app/src/main/res/layout/fragment_signup_select.xml
@@ -12,8 +12,9 @@
         android:id="@+id/toolbar_signup_select_siginup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:theme="@style/Theme.AgijagiToolbar"
         app:title="회원가입"
-        app:navigationIcon=""/>
+        app:navigationIcon="@drawable/arrow_back_24px"/>
 
     <LinearLayout
         android:layout_width="match_parent"
