--- a/agijagi/app/src/main/res/layout/fragment_order_detail.xml
+++ b/agijagi/app/src/main/res/layout/fragment_order_detail.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".order.OrderDetailFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar_order_detail_toolbar"
+        android:id="@+id/toolbar_order_detail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
+        android:theme="@style/Theme.AgijagiToolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/arrow_back_24px"
         app:title="배송조회" />
 
     <TextView
@@ -28,38 +27,153 @@
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_order_detail_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_order_detail" />
+
+    <ImageView
+        android:id="@+id/imageView_order_detail_delivery_ready"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_order_detail_arrival_information"
+        app:srcCompat="@drawable/agijagi_logo" />
+
+    <ImageView
+        android:id="@+id/imageView_order_detail_delivery_shipping"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView_order_detail_delivery_complete"
+        app:layout_constraintStart_toEndOf="@+id/imageView_order_detail_delivery_ready"
+        app:layout_constraintTop_toBottomOf="@+id/textView_order_detail_arrival_information"
+        app:srcCompat="@drawable/agijagi_logo" />
+
+    <ImageView
+        android:id="@+id/imageView_order_detail_delivery_complete"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_order_detail_arrival_information"
+        app:srcCompat="@drawable/agijagi_logo" />
+
+
+    <TextView
+        android:id="@+id/textView_order_detail_delivery_ready"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="배송 대기"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView_order_detail_delivery_ready"
+        app:layout_constraintStart_toStartOf="@+id/imageView_order_detail_delivery_ready"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_order_detail_delivery_ready" />
+
+    <TextView
+        android:id="@+id/textView_order_detail_delivery_shipping"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="배송 중"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView_order_detail_delivery_shipping"
+        app:layout_constraintStart_toStartOf="@+id/imageView_order_detail_delivery_shipping"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_order_detail_delivery_shipping" />
+
+    <TextView
+        android:id="@+id/textView_order_detail_delivery_complete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="배송 완료"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView_order_detail_delivery_complete"
+        app:layout_constraintStart_toStartOf="@+id/imageView_order_detail_delivery_complete"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_order_detail_delivery_complete" />
+
+
+    <View
+        android:id="@+id/view_order_detail_stick"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/divider_stick"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_order_detail_delivery_shipping" />
+
+    <ImageView
+        android:id="@+id/imageView_order_detail_product"
+        android:layout_width="112dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="24dp"
+        android:adjustViewBounds="true"
+        android:background="@drawable/imageview_rounded_stroke"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_order_detail_stick"
+        app:srcCompat="@drawable/agijagi_logo" />
+
+    <TextView
+        android:id="@+id/textView_order_detail_product_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="40dp"
+        android:text="상품명"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@+id/imageView_order_detail_product"
+        app:layout_constraintTop_toBottomOf="@+id/view_order_detail_stick" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="4dp"
+        android:text="운송장번호 0000000000000000000"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/imageView_order_detail_product"
+        app:layout_constraintTop_toBottomOf="@+id/textView_order_detail_product_name" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_order_detail_arrival_information">
+        app:layout_constraintTop_toBottomOf="@+id/imageView_order_detail_product">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_order_exchange"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="24dp"
+            android:layout_marginEnd="4dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/agijagi_logo"
-            android:layout_marginStart="28dp"/>
+            android:background="@drawable/narrow_box_rounded_button_solid"
+            android:text="택배 회사"
+            android:textColor="@color/white" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_order_shipping_tracking"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="24dp"
+            android:layout_marginStart="4dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/agijagi_logo"
-            android:layout_marginEnd="14dp"
-            android:layout_marginStart="14dp"/>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/agijagi_logo"
-            android:layout_marginEnd="28dp"/>
+            android:background="@drawable/narrow_box_rounded_button_solid"
+            android:text="배송 기사"
+            android:textColor="@color/white" />
 
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
