--- a/agijagi/app/src/main/res/layout/item_order.xml
+++ b/agijagi/app/src/main/res/layout/item_order.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
     android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
     android:layout_marginBottom="16dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:cardBackgroundColor="@color/jagi_ivory">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,20 +22,20 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="309dp"
             android:text="배송상태"
-            android:textSize="14sp"
             android:textColor="@color/black"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageView_order_product"
-            android:layout_width="104dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="12dp"
+            android:layout_width="112dp"
+            android:layout_height="84dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:adjustViewBounds="true"
+            android:background="@drawable/imageview_rounded_stroke"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_order_state"
             app:srcCompat="@drawable/agijagi_logo" />
@@ -44,10 +45,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="46dp"
             android:text="브랜드명"
             android:textSize="10sp"
             app:layout_constraintStart_toEndOf="@+id/imageView_order_product"
-            app:layout_constraintTop_toTopOf="@+id/imageView_order_product" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView_order_name"
@@ -78,40 +80,56 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
-            android:textColor="@color/black"
             android:text="100,000원"
+            android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@+id/imageView_order_product"
             app:layout_constraintTop_toBottomOf="@+id/textView_order_option" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView_order_product"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="12dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp">
+            app:layout_constraintTop_toBottomOf="@+id/imageView_order_product">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button_order_exchange"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="24dp"
+                android:layout_marginEnd="4dp"
                 android:layout_weight="1"
-                android:text="교환/반품 신청" />
+                android:background="@drawable/narrow_box_rounded_button_stroke"
+                android:text="교환/반품 신청"
+                android:textColor="@color/jagi_brown" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button_order_shipping_tracking"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="24dp"
+                android:layout_marginStart="4dp"
                 android:layout_weight="1"
-                android:text="배송조회" />
+                android:background="@drawable/narrow_box_rounded_button_solid"
+                android:text="배송조회"
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
-
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button"
+            android:layout_width="75dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            android:text="1:1 채팅"
+            android:textColor="@color/jagi_brown"
+            android:background="@drawable/narrow_box_rounded_button_stroke"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
