--- a/agijagi/app/src/main/res/layout/activity_main.xml
+++ b/agijagi/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
-        android:name="likelion.project.agijagi.shopping.ShoppingListFragment"
+        android:name="likelion.project.agijagi.product.ProductDetailFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
