--- a/agijagi/app/src/main/res/values/themes.xml
+++ b/agijagi/app/src/main/res/values/themes.xml
@@ -4,7 +4,6 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:statusBarColor">@color/transparency</item>
-        <item name="android:windowLightStatusBar">true</item>
         <item name="android:colorBackground">@color/jagi_ivory</item>
     </style>
 
@@ -12,8 +11,8 @@
 
     <style name="Theme.AgijagiToolbar" parent="Widget.Material3.AppBarLayout">
         <item name="android:background">@color/transparency</item>
-        <item name="android:titleTextColor">@color/black</item>
-        <item name="android:navigationBarColor">@color/black</item>
+        <item name="titleTextColor">@color/black</item>
+        <item name="navigationIconTint">@color/black</item>
         <item name="android:subtitle">null</item>
     </style>
 
